--- a/config.json
+++ b/config.json
@@ -1,11 +1,12 @@
 ﻿{
-    "date": [2023/3/1],
+    "date": ["2023/5/21"],
     "sess": [1],
-    "price": [2, 3, 1],
+    "price":["288"],
+    "city": "重庆站",
     "real_name": [1, 2],
-    "nick_name": "麦子1Akli",
-    "ticket_num": 1,
-    "driver_path": "C:\Program Files (x86)\Microsoft\Edge\Application",
+    "nick_name": "麦子776688",
+    "ticket_num": 2,
+    "driver_path": "C:\\Program Files\\Google\\Chrome\\Application\\chromedriver.exe",
     "damai_url": "https://www.damai.cn/",
-    "target_url": "https://search.damai.cn/search.htm?spm=a2oeg.home.category.ditem_0.591b23e1SM3Gnc&ctl=%E6%BC%94%E5%94%B1%E4%BC%9A&order=1&cty=%E6%9D%AD%E5%B7%9E"
+    "target_url": "https://detail.damai.cn/item.htm?spm=a2oeg.search_category.0.0.2ca74d15EMhu2K&id=712145948223&clicktitle=%E6%B5%B7%E9%98%94%E5%A4%A9%E7%A9%BA%20%E6%80%80%E5%BF%B5%E5%AE%B6%E9%A9%B9%E3%80%90%E6%B5%B7%E5%B1%B1%E3%80%91%E8%87%B4%E6%95%ACBEYOND%E9%87%91%E6%9B%B2%E6%BC%94%E5%94%B1%E4%BC%9A"
 }
